# ProSE_C

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  sonar-project.properties
doc/: doxygen
src/: main.c  util.h
src/example/: example.c  example.h
src/package/: package.h
test/: mainExampleTest.c  mainExampleTestMocked.c
test/example/: exampleTestMocked.c
